{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "GroundMovement",
            "id": "c4e1a199-c6bd-4512-88f9-d4ba385f1545",
            "actions": [
                {
                    "name": "horizontal",
                    "type": "PassThrough",
                    "id": "7eec1731-23be-480b-8aeb-b1099362aaf6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c07ee022-f289-40ee-8ab5-15d6dd385b1f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookX",
                    "type": "PassThrough",
                    "id": "29afde36-cea9-4ca1-ad3e-e2b2f8aa75ca",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookY",
                    "type": "PassThrough",
                    "id": "aafd43e4-5d16-4e4d-b4cc-e5ec2cf1829e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickUp",
                    "type": "Button",
                    "id": "e414e9ff-61f6-4000-802f-9ab00912a350",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "cdd333fd-593f-4cf1-9e27-a03715201994",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "60d6d590-f347-4dcf-9782-7aef3a4af3c1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "da023c6a-3541-436d-a656-9adc3fb61330",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "300d4269-a458-4a8e-a0e6-aca3a608315a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0f376c77-eacc-47f9-924b-66427fd228b7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "LeftJoystick",
                    "id": "9ac94596-161b-42a7-ae16-5807778c80d7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0f7afd5a-910d-46f2-87e4-3b5cf907b320",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "455d6fd3-3b38-4716-b1ba-550c2d0b9013",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "aa5e7a76-9726-4ac9-9c82-2996e7645651",
                    "path": "<Joystick>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "88d05025-b6c9-4587-b53c-db8a55650688",
                    "path": "<Joystick>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d939ef41-122f-4904-869a-fa8cefb4468e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad13028f-200f-43d3-9e5d-3fc7d11e302c",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a61b0cd6-0081-490e-8aa5-3a4c4d42f7bc",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "767532a1-abba-4d00-ab2c-f67071188353",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}